# techcamp-2021-05

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  package.json
assets/: index.html
lib/GLAD/: glad.c  glad.h
shader/: shader.frag  shader.vert
shaders/: shader.frag  shader.vert
src/: main.cpp
src/graphics/: Shader.h  camera.h  window.cpp  window.h
src/graphics/buffers/: buffer.h  indexbuffer.h  vertexarray.h
src/utils/: datamanager.h
